# pyGAM

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml
doc/imgs/: generate_images.py
doc/source/notebooks/: quick_start.ipynb  quick_start.py  tour_of_pygam.ipynb  tour_of_pygam.py
pygam/: __init__.py  callbacks.py  core.py  distributions.py  gam.py  links.py  log.py  optimization.py  penalties.py  pygam.py  terms.py  utils.py
pygam/datasets/: __init__.py  load_datasets.py
pygam/tests/: conftest.py  test_GAM_methods.py  test_GAM_params.py  test_GAMs.py  test_api.py  test_core.py  test_datasets.py  test_gridsearch.py  test_links.py  test_partial_dependence.py  test_penalties.py  test_terms.py  test_utils.py
