[build-system]
requires = ["flit_core>=3.2,<4", "numpy", "progressbar2", "scipy", "pandas", "future"]
build-backend = "flit_core.buildapi"

[project]
name = "pygam"
authors = [{name = "tommyod"}]
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["gam", "generalized additive models"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dynamic = ["version", "description"]

[project.urls]
Homepage = "https://github.com/tommyod/pyGAM"

[tool.flit.module]
name = "pygam"